Fixed style issue with the search bar - searchbar style breaks on resize, fixed that - no app found tooltip

--- a/src/components/search-bar/search-bar.module.css
+++ b/src/components/search-bar/search-bar.module.css
@@ -99,7 +99,8 @@ ul .suggestionText {
 .toolTip {
   height: 12px !important;
   background-color: rgba(255, 217, 0, 0.555) !important;
-  padding: 20px !important;
+  /* padding: 20px !important; */
+  padding: 10px !important;
   padding-top: 5px !important;
   font-size: 12px !important;
 }
@@ -116,7 +117,7 @@ ul .suggestionText {
   }
 
   ul.suggestionContainerOpen {
-    width: calc(100% - 32px);
+    width: calc(100% - 48px);
     padding: 5px 0;
   }
 
@@ -138,5 +139,11 @@ ul .suggestionText {
 
   div .inputRoot {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 599.99px) {
+  ul.suggestionContainerOpen {
+    width: calc(100% - 32px);
   }
 }
